--- a/config-service/src/main/resources/bootstrap.yml
+++ b/config-service/src/main/resources/bootstrap.yml
@@ -1,5 +1,5 @@
 server:
-  port:8081
+  port: 8081
 
 
 spring:
@@ -11,6 +11,7 @@ spring:
           searchPaths: config-data
           username: ${GIT_USER}
           password: ${GIT_PASSWORD}
+          dafault-label: main
   security:
     user:
       name: root
