--- a/service-customer/src/main/resources/bootstrap.yml
+++ b/service-customer/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: custumer-service
+    name: customer-service
   cloud:
     config:
       uri: http://localhost:8081
