fix customer file

--- a/config-data/customer-service.yml
+++ b/config-data/customer-service.yml
@@ -39,4 +39,4 @@ logging:
 eureka:
   client:
     serviceUrl:
-      dafaultZone: http://localhost:8099/eureka
+      defaultZone: http://localhost:8099/eureka/
